change retry_on_empty=True to False
Worked with pymodbus 3.x and with retry_on_empty=True or retry_on_invalid=True fail

https://github.com/riptideio/pymodbus/issues/641#issue-912344413

--- a/custom_components/peacefair_energy_monitor/manifest.json
+++ b/custom_components/peacefair_energy_monitor/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "peacefair_energy_monitor",
   "name": "Peacefair Energy Monitor",
+  "version": "0.6.2",
   "config_flow": true,
   "documentation": "https://github.com/georgezhao2010/peacefair_energy_monitor",
   "dependencies": [],
