update to version v0.7.0

--- a/custom_components/peacefair_energy/services.yaml
+++ b/custom_components/peacefair_energy/services.yaml
@@ -2,5 +2,5 @@ reset_energy:
   description: Reset the energy.
   fields:
     entity_id:
-      description: Name of the entity to reset
-      example: "sensor.192_168_1_100_9000_energy"
+      description: Energy entity want to reset
+      example: "sensor.192_168_1_100_energy"
